test/syntax/pass/bug2.sync
let node g x = 2.5 fby x
