test/syntax/fail/not_combinatorial/let_every.sync
let node g x = true
let x = (g true) every true
